--- a/Lothbrok-ColChain/WebContent/WEB-INF/web.xml
+++ b/Lothbrok-ColChain/WebContent/WEB-INF/web.xml
@@ -21,12 +21,19 @@
         <servlet-name>ExperimentsServlet</servlet-name>
         <servlet-class>org.colchain.colchain.servlet.ExperimentsServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>FragmentServlet</servlet-name>
+        <servlet-class>org.linkeddatafragments.servlet.FragmentServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>/assets/*</url-pattern>
     </servlet-mapping>
-
+    <servlet-mapping>
+        <servlet-name>FragmentServlet</servlet-name>
+        <url-pattern>/fragment/*</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>NodeApiServlet</servlet-name>
         <url-pattern>/api/*</url-pattern>
